--- a/RestWithASPNETUdemy/RestWithASPNETUdemy/Properties/launchSettings.json
+++ b/RestWithASPNETUdemy/RestWithASPNETUdemy/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "calculator/sum/1/1",
+      "launchUrl": "api/v1/person",
       "applicationUrl": "https://localhost:7033;http://localhost:5009",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "calculator/sum/1/1",
+      "launchUrl": "api/v1/person",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
